--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Habit tracker app ",
   "main": " nodemon index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "SATYAMDCS",
   "license": "ISC",
